Fixed vertical alignment of upload form (resolves #6)

--- a/resources/desktop.css
+++ b/resources/desktop.css
@@ -7,3 +7,7 @@
 #p-search-mobile {
   display: none;
 }
+
+.mw-label {
+  white-space: nowrap;
+}
